# qt-coding

./: README.md
Projects/JsonRpcCppLib/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  JsonRpcCpp.sln  cmake_install.cmake  jsonrpc.vcproj  jsonrpc_client.cpp  networking.h
Projects/JsonRpcCppLib/jsonrpc.dir/Debug/: BuildLog.htm
Zhockon/core/: ALL_BUILD.vcxproj  CMakeLists.txt  Makefile  audio.cc  cmake_install.cmake  elements.cc  graphics.cc  physics.cc  platform.cc  player.cc  python.cc  structure.cc  zhockon-python.vcproj  zhockon-python.vcxproj.filters  zhockon.cc  zhockon.vcxproj.filters
Zhockon/core/zhockon-python.dir/Debug/: BuildLog.htm  CL.write.1.tlog  Lib-link.read.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  zhockon-python.lastbuildstate
Zhockon/core/zhockon-python.dir/Release/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
Zhockon/core/zhockon.dir/Debug/: CL.write.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Zhockon/core/zhockon.dir/Release/: BuildLog.htm  CL.read.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog
Zhockon/samples/allegro/: ALL_BUILD.vcproj  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  adapter.cc  adapter.h  allegro-coronae.sln  allegro-coronae.vcproj  allegro-coronae.vcxproj  allegro-coronae.vcxproj.filters
Zhockon/samples/allegro/Debug/: allegro-coronae.idb  allegro-coronae.ilk
Zhockon/samples/allegro/Release/: allegro-coronae.idb
Zhockon/samples/allegro/allegro-coronae.dir/Debug/: ResolveAssemblyReference.cache  custombuild.write.1.tlog  mt.dep
Zhockon/samples/allegro/allegro-coronae.dir/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  mt.dep  mt.read.1.tlog  mt.write.1.tlog
remote/Zhockon/: ALL_BUILD.vcxproj  CMakeLists.txt  README  coronae.kdev4
remote/Zhockon/core/: ALL_BUILD.vcproj  ALL_BUILD.vcxproj.filters  bindings.cc  zhockon-core.sln  zhockon-python.vcxproj  zhockon.vcproj  zhockon.vcxproj
remote/Zhockon/core/zhockon-python.dir/Debug/: Lib-link.write.1.tlog  custombuild.command.1.tlog  lib.command.1.tlog
remote/Zhockon/core/zhockon-python.dir/Release/: BuildLog.htm  CL.read.1.tlog
remote/Zhockon/core/zhockon.dir/Debug/: BuildLog.htm  Lib-link.read.1.tlog  custombuild.read.1.tlog
remote/Zhockon/core/zhockon.dir/Release/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
remote/Zhockon/coronae/: ALL_BUILD.vcproj  CMakeLists.txt  coronae.vcproj
remote/Zhockon/coronae/coronae-zkn.dir/Debug/: CL.read.1.tlog  custombuild.write.1.tlog
remote/Zhockon/coronae/coronae-zkn.dir/Release/: CL.read.1.tlog  CL.write.1.tlog
remote/Zhockon/coronae/coronae.dir/Debug/: ResolveAssemblyReference.cache
remote/Zhockon/coronae/coronae.dir/Release/: BuildLog.htm  CL.read.1.tlog
remote/Zhockon/documents/: index.html
remote/Zhockon/include/: platform.h
remote/Zhockon/python/: __init__.py  audio.py  bindings.py
remote/Zhockon/samples/allegro/: allegro-coronae  cmake_install.cmake
remote/Zhockon/samples/allegro/allegro-coronae.dir/Debug/: BuildLog.htm  custombuild.command.1.tlog  custombuild.read.1.tlog
remote/Zhockon/samples/allegro/allegro-coronae.dir/Release/: BuildLog.htm  link.write.1.tlog  mt.command.1.tlog
remote/Zhockon/samples/helloworld/: cmake_install.cmake  helloworld.sln
remote/Zhockon/samples/helloworld/Release/: helloworld.idb
remote/Zhockon/samples/helloworld/helloworld.dir/Debug/: custombuild.command.1.tlog  custombuild.write.1.tlog  rc.command.1.tlog
remote/Zhockon/samples/helloworld/helloworld.dir/Release/: BuildLog.htm  cl.command.1.tlog  mt.read.1.tlog
remote/Zhockon/samples/invasores/: alienigena.py  naleatorios.py  objetodojogo.py
remote/Zhockon/samples/pyramid/: pyramid  pyramid.cc  pyramid.sln
remote/Zhockon/samples/pyramid/Debug/: pyramid.idb
remote/Zhockon/samples/pyramid/pyramid.dir/Debug/: BuildLog.htm  ResolveAssemblyReference.cache  custombuild.command.1.tlog  custombuild.write.1.tlog
remote/Zhockon/samples/pyramid/pyramid.dir/Release/: custombuild.read.1.tlog  custombuild.write.1.tlog  link.read.1.tlog
remote/Zhockon/samples/server/: coronae-server.sln  coronae-server.vcproj
remote/Zhockon/samples/server/Release/: coronae-server.idb
remote/Zhockon/samples/server/coronae-server.dir/Debug/: BuildLog.htm  CL.write.1.tlog  custombuild.command.1.tlog  mt.command.1.tlog  rc.command.1.tlog  rc.write.1.tlog
remote/Zhockon/samples/server/coronae-server.dir/Release/: BuildLog.htm  (+5 more)
simulator/: CMakeLists.txt  topology.json
simulator/src/: Equipment.h  Exceptions.h  Node.cpp
(+373 files in other folders)
