CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(NexSim)

IF(WIN32)
	SET(QT5_VERSION 5.1.1)
	SET(QT5_COMPILE msvc2012_64_opengl)
	SET(CMAKE_PREFIX_PATH "C:\\Qt\\Qt${QT5_VERSION}\\${QT5_VERSION}\\${QT5_COMPILE}")
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_DIR}include/)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5Core REQUIRED)
SET(NS_SOURCES 
${CMAKE_CURRENT_DIR}src/Stack.cpp
${CMAKE_CURRENT_DIR}src/Exceptions.cpp  
${CMAKE_CURRENT_DIR}src/Equipment.cpp  
${CMAKE_CURRENT_DIR}src/Node.cpp 
${CMAKE_CURRENT_DIR}src/Simulator.cpp
${CMAKE_CURRENT_DIR}src/Topology.cpp
${CMAKE_CURRENT_DIR}src/main.cpp
${CMAKE_CURRENT_DIR}topology.json)

ADD_EXECUTABLE(NexSim ${NS_SOURCES})
QT5_USE_MODULES(NexSim Core)